--- a/src/Shop/Shop.csproj
+++ b/src/Shop/Shop.csproj
@@ -1,9 +1,15 @@
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Features\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 
 </Project>
