--- a/src/Shop.Infrastructure.Data/Shop.Infrastructure.Data.csproj
+++ b/src/Shop.Infrastructure.Data/Shop.Infrastructure.Data.csproj
@@ -6,10 +6,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="1.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Shop.Core\Shop.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.EntityFrameworkCore.SqlServer">
+      <HintPath>..\..\..\..\Users\jon.tansey\.nuget\packages\microsoft.entityframeworkcore.sqlserver\1.1.2\lib\netstandard1.3\Microsoft.EntityFrameworkCore.SqlServer.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
