--- a/src/Shop/Shop.csproj
+++ b/src/Shop/Shop.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Content Include="wwwroot\css\site.css" />
+    <Content Include="wwwroot\js\site.js" />
     <Content Include="wwwroot\lib\bootstrap\bootstrap.min.css" />
   </ItemGroup>
   <ItemGroup>
@@ -31,7 +32,6 @@
   <ItemGroup>
     <Folder Include="Features\Shared\" />
     <Folder Include="wwwroot\img\" />
-    <Folder Include="wwwroot\js\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shop.Infrastructure.Data\Shop.Infrastructure.Data.csproj" />
