Add customer signup logic

--- a/src/Shop/Shop.csproj
+++ b/src/Shop/Shop.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="OdeToCode.AddFeatureFolders" Version="1.0.4" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Features\Customer\" />
     <Folder Include="Features\Shared\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
